Commit the observation

--- a/Kamalini_ML.ipynb
+++ b/Kamalini_ML.ipynb
@@ -1234,8 +1234,21 @@
    "source": [
     "## Part 4: Insights\n",
     "\n",
-    "1. We have observed that regression lines are different because slope and intercept obtained from Part 2 and Part 3 are different.\n",
-    "2. There is a small different between slopes of regression lines obtained from Part 2 and Part 3. However, there is a huge difference between intercepts of regression lines in Part 2 and Part 3.\n"
+    "In chapter 10, we applied Simple Linear Regression (SLR) to forecast future temperatures using time series data. Specifically, we utilized a dataset spanning from 1895 to 2018, capturing the average high temperatures in January for New York City. Through SLR, we developed a predictive model to estimate temperatures for both 1890 and 2024. The predicted temperatures were 38.59°F for January 2024 and 36.61°F for 1890.\n",
+    "\n",
+    "In chapter 15, we continued to employ the SLR technique but integrated a scikit-learn estimator. This allowed us to utilize the coefficient and intercept values derived from the scikit-learn estimator to make projections. The scikit-learn estimator predicted the January 2024 average high temperature for NYC to be 38.94°F and retained the same forecasted temperature of 36.61°F for 1890.\n",
+    "\n",
+    "Distinguishing Factors:\n",
+    "Upon examining the visualizations and graphs, slight disparities between the two predictive models become evident. This variance arises due to the fundamental dissimilarities in their methodologies. While SLR offers a simplistic approach, assuming gradual year-to-year changes and delineating relationships through a linear regression line, the scikit-learn estimator can accommodate more intricate relationships, depending on the algorithm employed. Thus, the scikit-learn estimator, although more complex, can better handle the nuances within the dataset.\n",
+    "\n",
+    "Dataset Insights:\n",
+    "An analysis of the dataset reveals a consistent trend predicted by both models: a gradual increase in temperatures over time. Remarkably, despite their methodological disparities, both models forecast a similar trajectory over centuries. A noteworthy observation is the projection that within a mere 200 years, the average high January temperature in NYC is anticipated to rise by 10 degrees Fahrenheit, underscoring the remarkable nature of climate change.\n",
+    "\n",
+    "Observation :\n",
+    "\n",
+    "1. I have observed that regression lines are different because slope and intercept obtained from Part 2 and Part 3 are different.\n",
+    "2. There is a small different between slopes of regression lines obtained from Part 2 and Part 3. However, there is a huge difference between intercepts of regression lines in Part 2 and Part 3.\n",
+    "\n"
    ]
   },
   {
